SERVER-13910: Warn the user when running a 32-bit build on Win64

Windows 32 bit builds have less virtual memory available
then 64-bit builds, warn the user they should use a 64-bit build
over a 32-bit build.