src/mongo/util/mmap_win.cpp
@@ -33,6 +33,7 @@
 #include "mongo/db/storage/durable_mapped_file.h"
 #include "mongo/util/file_allocator.h"
 #include "mongo/util/mmap.h"
+#include "mongo/util/processinfo.h"
 #include "mongo/util/text.h"
 #include "mongo/util/timer.h"
 
@@ -296,6 +297,20 @@ namespace mongo {
                     if (dosError == ERROR_INVALID_ADDRESS && current_retry < 5) {
                         continue;
                     }
+
+#ifndef _WIN64
+                    // Warn user that if they are running a 32-bit app on 64-bit Windows
+                    if (dosError == ERROR_NOT_ENOUGH_MEMORY) {
+                        BOOL wow64Process;
+                        BOOL retWow64 = IsWow64Process(GetCurrentProcess(), &wow64Process);
+                        if (retWow64 && wow64Process) {
+                            log() << "This is a 32-bit MongoDB binary running on a 64-bit"
+                                " operating system that has run out of virtual memory for"
+                                " databases. Switch to a 64-bit build of MongoDB to open"
+                                " the databases.";
+                        }
+                    }
+#endif
 
                     log() << "MapViewOfFileEx for " << filename
                         << " at address " << thisAddress
